@@ -44,7 +44,7 @@ import com.badlogic.gdx.utils.Pools;
  * The preferred size of the list is determined by the text bounds of the items and the size of the {@link ListStyle#selection}.
  * @author mzechner
  * @author Nathan Sweet */
-public class List<T> extends Widget implements Cullable {
+public class List<T> extends Widget implements Cullable, Styleable<List.ListStyle> {
 	ListStyle style;
 	final Array<T> items = new Array();
 	ArraySelection<T> selection = new ArraySelection(items);
