@@ -415,10 +415,28 @@ public class Skin implements Disposable {
 	}
 
 	/** Sets the style on the actor to disabled or enabled. This is done by appending "-disabled" to the style name when enabled is
+	 * false, and removing "-disabled" from the style name when enabled is true. If the style was not found in the skin, an
+	 * exception is thrown. */
+	public <V> void setEnabled (Styleable<V> styleable, boolean enabled) {
+		V style = styleable.getStyle();
+
+		@SuppressWarnings("unchecked")
+		Class<V> styleClass = (Class<V>)style.getClass();
+
+		String name = find(style);
+		if (name == null) return;
+		name = name.replace("-disabled", "") + (enabled ? "" : "-disabled");
+		style = get(name, styleClass);
+
+		styleable.setStyle(style);
+	}
+
+	/** Sets the style on the actor to disabled or enabled. This is done by appending "-disabled" to the style name when enabled is
 	 * false, and removing "-disabled" from the style name when enabled is true. A method named "getStyle" is called the actor via
-	 * reflection and the name of that style is found in the skin. If the actor doesn't have a "getStyle" method or the style was
-	 * not found in the skin, no exception is thrown and the actor is left unchanged. */
-	public void setEnabled (Actor actor, boolean enabled) {
+	 * reflection and the name of that style is found in the skin. If the actor doesn't have a "getStyle" and "setStyle" method the
+	 * actor is left unchanged. If the style was not found in the skin, an exception is thrown. */
+	@Deprecated
+	public void setEnabledReflection (Actor actor, boolean enabled) {
 		// Get current style.
 		Method method = findMethod(actor.getClass(), "getStyle");
 		if (method == null) return;
