@@ -37,7 +37,7 @@ import com.badlogic.gdx.utils.Null;
  * The preferred size of a window is the preferred size of the title text and the children as laid out by the table. After adding
  * children to the window, it can be convenient to call {@link #pack()} to size the window to the size of the children.
  * @author Nathan Sweet */
-public class Window extends Table {
+public class Window extends Table implements Styleable<Window.WindowStyle> {
 	static private final Vector2 tmpPosition = new Vector2();
 	static private final Vector2 tmpSize = new Vector2();
 	static private final int MOVE = 1 << 5;
